[gd_scene load_steps=6 format=2]

[ext_resource path="res://Yarn.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -240, -450, 0, 0, 0, 0, 240, -450, 0, 0, 0, 0, 240, 270, 0, 0, 0, 0, -240, 270, 0, 0, 0, 0, -240, -450 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
Yarn = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="YarnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="YarnPath" type="Path2D" parent="."]
position = Vector2( 240, 450 )
curve = SubResource( 1 )

[node name="YarnSpawnLocation" type="PathFollow2D" parent="YarnPath"]
position = Vector2( -240, -450 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="YarnTimer" to="." method="_on_YarnTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
